--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "openhamclock",
-  "version": "3.14.4",
   "description": "Amateur Radio Dashboard - A modern web-based HamClock alternative",
   "main": "server.js",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && vitest run",
     "preview": "vite preview",
     "prestart": "npm run build",
     "start": "node server.js",
     "server": "node server.js",
-    "test": "echo \"Tests passing\" && exit 0"
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -30,9 +32,13 @@
   "devDependencies": {
     "@playwright/test": "^1.58.1",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^2.1.8",
+    "jsdom": "^25.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "vite": "^5.0.10"
+    "vite": "^5.0.10",
+    "vitest": "^2.1.8",
+    "@vitest/coverage-v8": "^2.1.8"
   },
   "keywords": [
     "amateur-radio",
