--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "Amateur Radio Dashboard - A modern web-based HamClock alternative",
   "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build && vitest run",
-    "preview": "vite preview",
+    "dev": "npx vite",
+    "build": "npx vite build",
+    "preview": "npx vite preview",
     "prestart": "npm run build",
     "start": "node server.js",
     "server": "node server.js",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage"
+    "test": "npx vitest",
+    "test:ui": "npx vitest --ui",
+    "test:run": "npx vitest run",
+    "test:coverage": "npx vitest run --coverage"
   },
   "dependencies": {
     "axios": "^1.6.2",
